--- a/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.html
+++ b/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.html
@@ -59,7 +59,7 @@
             @if (carouselLength) {
             <h1>Escolha qual Cartão Pré-pago deseja</h1>
             <div>
-                <app-carousel-component (arrayLength)="arrayLength($event)"></app-carousel-component>
+                <app-cards-options-component></app-cards-options-component>
             </div>
             } @else {
             <h1>Solicite um de nossos cartões</h1>
