--- a/src/app/components/balance-component/card-component/card-component.css
+++ b/src/app/components/balance-component/card-component/card-component.css
@@ -31,7 +31,6 @@
         justify-content: space-between;
         align-items: center;
         padding: 15px;
-        background: #0f7cf1;
         height: 200px;
         width: 90%;
         border-radius: 10px;
@@ -73,6 +72,18 @@
 
 .wrapper input:placeholder-shown {
     font-size: 18px;
+}
+
+.comum {
+    background: rgb(15, 98, 241);
+}
+
+.estudante {
+    background: rgb(12, 224, 58);
+}
+
+.premium {
+    background: rgb(8, 8, 0);
 }
 
 .recharge-options {
