Adicionando pagamento do ticket atual

--- a/src/app/components/balance-component/balance-component.html
+++ b/src/app/components/balance-component/balance-component.html
@@ -7,7 +7,7 @@
                     <p>Seu saldo disponível</p>
                 </div>
                 <div class="wrap">
-                    @if(visible == true) {o
+                    @if(visible == true) {
                     <h1>R$ {{balance}}</h1>
                     } @else {
                     <h1>R$ ******</h1>
