--- a/src/app/components/current-ticket-component/current-ticket-component.html
+++ b/src/app/components/current-ticket-component/current-ticket-component.html
@@ -11,7 +11,7 @@
                     </div>
                     <h1>Nenhum Ticket Ativo</h1>
                     <p>Você não possui um ticket de estacionamento ativo no momento.</p>
-                    <button type="button" (click)="createTicket(idUser)">Gerar Novo Ticket</button>
+                    <button type="button" (click)="createTicket()">Gerar Novo Ticket</button>
                 </div>
             </div>
         </div>
