--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@
     font-family: sans-serif;
 }
 
+:host {
+    color: white;
+    font-family: sans-serif;
+}
+
 * {
     padding: 0;
     margin: 0;
