--- a/src/app/components/history-component/history-card-component/history-card-component.css
+++ b/src/app/components/history-component/history-card-component/history-card-component.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
     gap: 1.5rem;
     width: 100%;
-    height: 100px;
+    height: fit-content;
     padding: 20px 15px;
     font-size: 15px;
     border-radius: 10px;
@@ -29,7 +29,7 @@
     .values {
         position: relative;
         bottom: 6px;
-        height: 50px;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         gap: 18px;
