--- a/src/app/components/login-registration-component/login-component/login-component.css
+++ b/src/app/components/login-registration-component/login-component/login-component.css
@@ -61,8 +61,22 @@ form {
         height: 40px;
         border: none;
         border-radius: 10px;
+        padding: 0 10px;
     }
 
+    .form-content input:hover {
+        border: 1px solid #929292;
+    }
+
+    .form-content input:focus-visible {
+        outline: 1px solid #929292;
+        border: none;
+        padding: 0 10px;
+    }
+
+    .form-content input:placeholder-shown {
+        padding: 0 10px;
+    }
 }
 
 .text-wrap h1 {
