--- a/src/app/components/history-component/history-component.html
+++ b/src/app/components/history-component/history-component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
         <div class="title">
-            <h1>Histórico de Tickets</h1>
+            <h1>Histórico de {{option}}</h1>
         </div>
         <div class="content">
             <div class="filter">
