--- a/src/app/components/profile-component/profile-component.html
+++ b/src/app/components/profile-component/profile-component.html
@@ -36,7 +36,7 @@
                 <li><img src="edit-profile.svg" alt=""> <a href="">Editar Dados</a></li>
                 <li><img src="credit-card.svg" alt=""><a href="">Cartões e Pagamentos</a></li>
                 <li><img src="gear.svg" alt=""><a href="">Configurações</a></li>
-                <li><img src="exit.svg" alt=""><a class="exit" (click)="logoutUser()">Sair</a></li>
+                <li (click)="logoutUser()" ><img src="exit.svg" alt=""><a class="exit">Sair</a></li>
             </ul>
         </article>
     </div>
