--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,6 +1,6 @@
 <app-hearder-component></app-hearder-component>
 <div class="container">
     <app-balance-component></app-balance-component>
-    <app-current-ticket-component></app-current-ticket-component>
+    <app-current-ticket-component id="tickect" ></app-current-ticket-component>
 </div>
 <app-navegation-component></app-navegation-component>
