--- a/src/app/components/balance-component/carousel-component/carousel-component.html
+++ b/src/app/components/balance-component/carousel-component/carousel-component.html
@@ -4,7 +4,7 @@
         [class.estudante]="item.Tipo == 'Estudante'" [class.comum]="item.Tipo == 'Comum'">
             <h1>Cartão {{item.Tipo}}</h1>
             <h2>R$ {{item.Saldo}}</h2>
-            <h3>{{item.NumeroCard}}</h3>
+            <h3>**** **** **** {{item.NumeroCard.toString().slice(-4)}}</h3>
         </div>
     }
     <div class="cards" [class.hidden]="cards.length == 4" (click)="cardSolicitationNavegation()">
