--- a/src/app/components/history-component/history-card-component/history-card-component.css
+++ b/src/app/components/history-component/history-card-component/history-card-component.css
@@ -11,6 +11,28 @@
     border-radius: 10px;
     gap: 1.5rem;
     width: 100%;
+
+    .no-history {
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+        margin: 0 auto;
+    }
+
+    .no-history button {
+        width: 40%;
+        height: 35px;
+        border: none;
+        border-radius: 10px;
+        font-size: 16px;
+        background-color: #0f7cf1;
+        cursor: pointer;
+        color: white;
+    }
 }
 
 .card {
