--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,10 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
+
+@supports (-webkit-touch-callout: none) {
+    input,
+    select {
+        font-size: 16px;
+    }
+}
