Alterando o input de matricula e barrando o pagamento sem selecionar um metodo

--- a/src/app/components/current-ticket-component/current-ticket-component.html
+++ b/src/app/components/current-ticket-component/current-ticket-component.html
@@ -28,14 +28,14 @@
                     <img src="clock.svg" alt="timer">
                     <div class="space">
                         <h2>Entrada</h2>
-                        <h3> {{ date }} </h3>
+                        <h3> {{ hour }} </h3>
                     </div>
                 </div>
                 <div class="details">
                     <img src="calendar.svg" alt="">
                     <div class="space">
                         <h2>Data</h2>
-                        <h3> {{ `${timeNow.getDate()}/${timeNow.getMonth()}/${timeNow.getFullYear()}` }} </h3>
+                        <h3> {{ date }} </h3>
                     </div>
                 </div>
                 <div class="details">
