--- a/src/app/components/login-registration-component/registration-component/registration-component.html
+++ b/src/app/components/login-registration-component/registration-component/registration-component.html
@@ -47,7 +47,7 @@
             </div>
             <div class="form-content">
                 <label for="matricula">Matrícula</label>
-                <input type="number" id="matricula" formControlName="Matricula">
+                <input type="text" id="matricula" formControlName="Matricula" appOnlyNumbers>
                 <div class="erro" *ngIf="form.get('Matricula')?.errors?.['required'] && form.get('Matricula')?.touched">
                     <span>A matrícula é obrigatória!</span>
                 </div>
